--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
 cmake_minimum_required(VERSION 3.11.3)
 add_executable(TetrisApp main.cpp my_function.cpp)
+target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system)
