--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.11.3)
-add_executable(TetrisTest ${CMAKE_SOURCE_DIR}/test/test.cpp)
+add_executable(TetrisTest test.cpp)
 target_link_libraries(TetrisTest gtest_main My_Func_Lib)
