Add initial GameBackground class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
                  EXCLUDE_FROM_ALL)
 
 
-add_subdirectory(test)
 add_subdirectory(src)
+add_subdirectory(test)
 
 add_library(My_Func_Lib STATIC src/my_function.cpp)
+add_library(GameBackgroundLib STATIC src/GameBackground.cpp)
