--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.11.3)
 add_executable(TetrisTest test.cpp)
+add_executable(GameBackgroundTest GameBackgroundTest.cpp)
 target_link_libraries(TetrisTest gtest_main My_Func_Lib)
+target_link_libraries(GameBackgroundTest gtest_main GameBackgroundLib)
