--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(test)
 
 add_library(My_Func_Lib STATIC src/my_function.cpp)
 add_library(GameBackgroundLib STATIC src/GameBackground.cpp)
+add_library(TetrominoLib STATIC src/Tetromino.cpp)
