Rename the class GameBackground into GridLogic
Rename the class GameBackground into GridLogic and all
other related things like corresponding mocks and test
objects to state the relation to the class GridGraphic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11.3)
-add_library(GameBackgroundLib STATIC GameBackground.cpp)
 add_library(TetrominoLib STATIC Tetromino.cpp)
+add_library(GridLogicLib STATIC GridLogic.cpp)
 add_library(GridGraphicLib STATIC GridGraphic.cpp)
 add_library(GameLib STATIC Game.cpp)
 add_executable(TetrisApp main.cpp)
