Initial version of TetrominoGraphic
Implement a class to draw different tetratimo shapes
on the GridGraphic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.11.3)
 add_library(TetrominoLib STATIC Tetromino.cpp)
 add_library(GridLogicLib STATIC GridLogic.cpp)
 add_library(GridGraphicLib STATIC GridGraphic.cpp)
+add_library(TetrominoGraphicLib STATIC TetrominoGraphic.cpp)
 add_library(GameLib STATIC Game.cpp)
 add_executable(TetrisApp main.cpp)
-target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system GridGraphicLib GameLib)
+target_link_libraries(TetrominoGraphicLib sfml-graphics TetrominoLib GridGraphicLib)
+target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system GridGraphicLib TetrominoGraphicLib GameLib)
