--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,14 @@ add_library(GridLogicLib STATIC GridLogic.cpp)
 add_library(GridGraphicLib STATIC GridGraphic.cpp)
 add_library(TetrominoGraphicLib STATIC TetrominoGraphic.cpp)
 add_library(PlayGroundLib STATIC PlayGround.cpp)
+add_library(DashboardLib STATIC Dashboard.cpp)
 add_library(GameLib STATIC Game.cpp)
 add_executable(TetrisApp main.cpp)
+
+target_link_libraries(GridGraphicLib sfml-graphics)
 target_link_libraries(TetrominoGraphicLib sfml-graphics TetrominoLib GridGraphicLib)
-target_link_libraries(PlayGroundLib TetrominoGraphicLib sfml-window)
-target_link_libraries(GameLib GridLogicLib TetrominoGraphicLib PlayGroundLib)
-target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system GridGraphicLib TetrominoGraphicLib PlayGroundLib GameLib)
+target_link_libraries(PlayGroundLib GridLogicLib GridGraphicLib TetrominoGraphicLib DashboardLib)
+target_link_libraries(GameLib PlayGroundLib)
+target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system GameLib)
+
+configure_file(Gasalt-Regular.ttf ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
