--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,15 +3,15 @@ add_library(TetrominoLib STATIC Tetromino.cpp)
 add_library(GridLogicLib STATIC GridLogic.cpp)
 add_library(GridGraphicLib STATIC GridGraphic.cpp)
 add_library(TetrominoGraphicLib STATIC TetrominoGraphic.cpp)
-add_library(PlayGroundLib STATIC PlayGround.cpp)
+add_library(GameLib STATIC Game.cpp)
 add_library(DashboardLib STATIC Dashboard.cpp)
 add_library(ControllerLib STATIC Controller.cpp)
 add_executable(TetrisApp main.cpp)
 
 target_link_libraries(GridGraphicLib sfml-graphics)
 target_link_libraries(TetrominoGraphicLib sfml-graphics TetrominoLib GridGraphicLib)
-target_link_libraries(PlayGroundLib GridLogicLib GridGraphicLib TetrominoGraphicLib DashboardLib)
-target_link_libraries(ControllerLib PlayGroundLib)
+target_link_libraries(GameLib GridLogicLib GridGraphicLib TetrominoGraphicLib DashboardLib)
+target_link_libraries(ControllerLib GameLib)
 target_link_libraries(TetrisApp sfml-graphics sfml-window sfml-system ControllerLib)
 
 configure_file(Gasalt-Regular.ttf ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
